Add contact form 'the html part'

--- a/index.html
+++ b/index.html
@@ -196,7 +196,39 @@
 		</div>
 		<div class="empty"></div>
 			
-
 </section>
+<!-- Contact Form -->
+<footer class="footer-section">
+	<h2>Contact me</h2>
+	<p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+	<form action="https://formspree.io/f/mrgjbnjl"
+				method="post"
+				class="contact-form">
+				<input 
+					type="text"
+					name="user-name"
+					placeholder="Name(s)"
+					maxlength="30"
+					required
+					>
+				<input 
+					type="email"
+					name="user-emai"
+					placeholder="mail@exemple.com"
+					required
+				>
+				<textarea 
+					name="user-msg" 
+					id="contact-msg" 
+					placeholder="Write your message"
+					maxlength="500"
+					required></textarea>
+					<button class="contact-submit" type="submit">
+						Get In Touch
+					</button>
+
+	</form>  
+</footer>
+
 </body>
 </html>
