styling footer, h1 tag, p tag & contact form

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 </section>
 <!-- Contact Form -->
 <footer class="footer-section">
-	<h2>Contact me</h2>
+	<h1>Contact me</h1>
 	<p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
 	<form action="https://formspree.io/f/mrgjbnjl"
 				method="post"
@@ -224,7 +224,7 @@
 					maxlength="500"
 					required></textarea>
 					<button class="contact-submit" type="submit">
-						Get In Touch
+						Get in Touch
 					</button>
 
 	</form>  
