fix linters warning

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<!-- Mobile Navbar-->
 			<nav class="toolbar">
 				<a class="logo left" href="#">Mehdi Rahal</a>
-				<button class="btn hamburger right">
+				<button type="button" class="btn hamburger right">
 					<img src="images/welcome/Enabled.png" alt="enabled">
 				</button>
 			</nav>
