Fix responsivity issues

--- a/index.html
+++ b/index.html
@@ -188,34 +188,34 @@
 			<!-- Skills division -->
 			<div class="skill_div">
 				<ul class="skills no_bullet">
-					<li> 
+					<li class="li_accordion"> 
 						<div class="accordion">
 							<h3>Languages </h3>
 							<img class="arrow" src="images/arrows/down-chevron.png" alt="right-arrow">
 						</div>
-
-						<ul class="no_bullet">
-								<li class="skill_list">
-									<img class="skill_img" src="images/about-myself/logo/js.png" alt="js">
-									<h4>JavaScript</h4>
-								</li>
-								<li class="skill_list">
-									<img class="skill_img" src="images/about-myself/logo/html.png" alt="html">
-									<h4>HTML</h4>
-								</li>
-								<li class="skill_list">
-									<img class="skill_img" src="images/about-myself/logo/css.png" alt="css">
-									<h4>CSS</h4>
-								</li>
-						</ul>
 					</li>
-					<li>
+					<ul class="skill_container no_bullet">
+						<li class="skill_list">
+							<img class="skill_img" src="images/about-myself/logo/js.png" alt="js">
+							<h4>JavaScript</h4>
+						</li>
+						<li class="skill_list">
+							<img class="skill_img" src="images/about-myself/logo/html.png" alt="html">
+							<h4>HTML</h4>
+						</li>
+						<li class="skill_list">
+							<img class="skill_img" src="images/about-myself/logo/css.png" alt="css">
+							<h4>CSS</h4>
+						</li>
+					</ul>
+					
+					<li class="li_accordion">
 						<div class="accordion">
 							<h3>Frameworks</h3>
 							<img class="arrow" src="images/arrows/right-chevron.png" alt="right-arrow">
 						</div>
 					</li>
-					<li>
+					<li class="li_accordion">
 						<div class="accordion">
 							<h3>Skills</h3>
 							<img class="arrow" src="images/arrows/right-chevron.png" alt="right-arrow">
