Add google analytics

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=mehdi.rahal92@gmail"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){window.dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'mehdi.rahal92@gmail');
+	</script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio_mobile</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <body>
 	<!-- Home section-->
 	<header>
