Modify Tracking Id for google analytics

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=mehdi.rahal92@gmail"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=https://mehdi-rh.github.io/Portfolio_Microverse/"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){window.dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('config', 'mehdi.rahal92@gmail');
+		gtag('config', 'https://mehdi-rh.github.io/Portfolio_Microverse/');
 	</script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
