Another try to link google analytics to the website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=https://mehdi-rh.github.io/Portfolio_Microverse/"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NGPY12D30P"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){window.dataLayer.push(arguments);}
+		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('config', 'https://mehdi-rh.github.io/Portfolio_Microverse/');
+
+		gtag('config', 'G-NGPY12D30P');
 	</script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
