add dom in navigation bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		gtag('config', 'G-NGPY12D30P');
 	</script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,13 +45,21 @@
 			<!-- Desktop Navbar-->
 			<div class="head_desktop">
 				<a class="logo" href="#">Mehdi Rahal</a>
-				<div class="top_nav">
+
 					<nav >
-						<a href="#">Portfolio</a>
-						<a href="#">About</a>
-						<a href="#">Contacts</a>
+						<ul class="menu">
+							<li><a class="menuItem" href="#">Home</a></li>
+							<li><a class="menuItem" href="#">Profile</a></li>
+							<li><a class="menuItem" href="#">About</a></li>
+							<li><a class="menuItem" href="#">Contacts</a></li>
+						  </ul>
+						  <button class="hamburger">
+							<!-- material icons https://material.io/resources/icons/ -->
+							<i class="menuIcon material-icons">menu</i>
+							<i class="closeIcon material-icons">close</i>
+						  </button>
 					</nav>
-				</div>
+
 			</div>
 			<div class="text">
 				<h1>I’m Mehdi <br>Glad to see you!</h1>
@@ -281,7 +290,7 @@
 
 		  </div>
 		</div>
-
 	</footer>
+	<script src="script.js"></script>
 </body>
 </html>
