Devide style.css file into two files mobile .css & desktop.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio_mobile</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles/desktop.css">
+	<link rel="stylesheet" href="styles/mobile.css">
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <body>
