Cancel changes and devide style.css into mobile.css & desktop.css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 
 		gtag('config', 'G-NGPY12D30P');
 	</script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio_mobile</title>
-	<link rel="stylesheet" href="styles/desktop.css">
 	<link rel="stylesheet" href="styles/mobile.css">
+	<link rel="stylesheet" href="styles/desktop.css">
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <body>
@@ -39,28 +38,20 @@
 			<!-- Mobile Navbar-->
 			<nav class="toolbar">
 				<a class="logo left" href="#">Mehdi Rahal</a>
-				<button type="button" class="btn hamburger right">
+				<button class="btn hamburger right">
 					<img src="images/welcome/Enabled.png" alt="enabled">
 				</button>
 			</nav>
 			<!-- Desktop Navbar-->
 			<div class="head_desktop">
 				<a class="logo" href="#">Mehdi Rahal</a>
-
+				<div class="top_nav">
 					<nav >
-						<ul class="menu">
-							<li><a class="menuItem" href="#">Home</a></li>
-							<li><a class="menuItem" href="#">Profile</a></li>
-							<li><a class="menuItem" href="#">About</a></li>
-							<li><a class="menuItem" href="#">Contacts</a></li>
-						  </ul>
-						  <button class="hamburger">
-							<!-- material icons https://material.io/resources/icons/ -->
-							<i class="menuIcon material-icons">menu</i>
-							<i class="closeIcon material-icons">close</i>
-						  </button>
+						<a href="#">Portfolio</a>
+						<a href="#">About</a>
+						<a href="#">Contacts</a>
 					</nav>
-
+				</div>
 			</div>
 			<div class="text">
 				<h1>I’m Mehdi <br>Glad to see you!</h1>
@@ -250,7 +241,7 @@
 		<div class="contact-wrapper">
 		  <div class="contact-wrapper-two">
 				<div class="contactme-body">
-					<h1 class="contact-heading">Contact me</h1>
+					<h2 class="contact-heading">Contact me</h2>
 					<p class="message-contact">
 					If you have an application you are interested in developing, a
 					feature that you need built or a project that needs coding. I’d
@@ -288,10 +279,8 @@
 					Get in touch
 					</button>
 				</form>
-
 		  </div>
 		</div>
 	</footer>
-	<script src="script.js"></script>
 </body>
 </html>
