Set the mobile menu; still need improvment: top background and other things

--- a/index.html
+++ b/index.html
@@ -32,27 +32,24 @@
 				</div>
 			</div>
 		</div>
+ 
+		<nav class="navbar">
+			<a href="#" class="">Mehdi Rahal</a>
+			<ul class="nav-menu ">
+				<li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
+				<li class="nav-item"><a href="#" class="nav-link">About</a></li>
+				<li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
+			</ul>
+			<div class="hamburger">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+		</nav>
+
 	
 		
 		<div class="headline">
-			<!-- Mobile Navbar-->
-			<nav class="toolbar">
-				<a class="logo left" href="#">Mehdi Rahal</a>
-				<button class="btn hamburger right">
-					<img src="images/welcome/Enabled.png" alt="enabled">
-				</button>
-			</nav>
-			<!-- Desktop Navbar-->
-			<div class="head_desktop">
-				<a class="logo" href="#">Mehdi Rahal</a>
-				<div class="top_nav">
-					<nav >
-						<a href="#">Portfolio</a>
-						<a href="#">About</a>
-						<a href="#">Contacts</a>
-					</nav>
-				</div>
-			</div>
+
 			<div class="text">
 				<h1>I’m Mehdi <br>Glad to see you!</h1>
 				<p>I’m a software developer! I can help you build a product ,
@@ -282,5 +279,6 @@
 		  </div>
 		</div>
 	</footer>
+	<script src="script.js"></script>
 </body>
 </html>
