Set hamburger menu

--- a/index.html
+++ b/index.html
@@ -34,20 +34,19 @@
 		</div>
  
 		<nav class="navbar">
-			<a href="#" class="">Mehdi Rahal</a>
+			<a href="#" class="logo">Mehdi Rahal</a>
 			<ul class="nav-menu ">
-				<li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
-				<li class="nav-item"><a href="#" class="nav-link">About</a></li>
-				<li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
+				<li class="nav-item"><a href="#portfolio" class="nav-link">Portfolio</a></li>
+				<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+				<li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
+			</div>
 		</nav>
 
-	
-		
 		<div class="headline">
 
 			<div class="text">
@@ -73,7 +72,7 @@
 		</div>
 	</header>
 		
-	<section class="works">
+	<section id="portfolio" class="works">
 		<!--1st card-->
 		<div class="project">
 			<div class="image">
@@ -172,7 +171,7 @@
 		</div>
 	</section>
 	<!-- About my self section-->
-	<section class="about_myself">
+	<section id="about" class="about_myself">
 			<div class="top">
 				<div>
 					<h2>About Myself</h2>
@@ -234,7 +233,7 @@
 		
 	</section>
 	<!-- Contact form -->
-	<footer class="footer-container">
+	<footer id="contacts" class="footer-container">
 		<div class="contact-wrapper">
 		  <div class="contact-wrapper-two">
 				<div class="contactme-body">
