Fix webhint warning

--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NGPY12D30P"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'G-NGPY12D30P');
-	</script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +14,15 @@ href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
 integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
 crossorigin="anonymous"
 /> 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NGPY12D30P"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-NGPY12D30P');
+	</script>
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <body>
@@ -101,7 +101,7 @@ crossorigin="anonymous"
 					<li class="tag">css</li>
 					<li class="tag">javascript</li>
 				</ul>
-				<button  data-modal-target=".project1" class="project_btn  btn-effect ">See Project</button>
+				<button type="button" class="project_btn  btn-effect ">See Project</button>
 			</div>
 		</div>
 		<!--2st card-->
@@ -125,7 +125,7 @@ crossorigin="anonymous"
 					<li class="tag">css</li>
 					<li class="tag">javascript</li>
 				</ul>
-				<button  class="project_btn  btn-effect ">See Project</button>
+				<button type="button" class="project_btn  btn-effect ">See Project</button>
 			</div>
 		</div>
 		<!--3st card-->
@@ -149,7 +149,7 @@ crossorigin="anonymous"
 					<li class="tag">css</li>
 					<li class="tag">javascript</li>
 				</ul>
-				<button  class="project_btn  btn-effect ">See Project</button>
+				<button type="button" class="project_btn  btn-effect ">See Project</button>
 			</div>
 		</div>
 		<!--4st card-->
@@ -173,7 +173,7 @@ crossorigin="anonymous"
 					<li class="tag">css</li>
 					<li class="tag">javascript</li>
 				</ul>
-				<button  class="project_btn  btn-effect">See Project</button>
+				<button type="button" class="project_btn  btn-effect">See Project</button>
 			</div>
 		</div>
 	</section>
