--- a/index.html
+++ b/index.html
@@ -34,17 +34,19 @@
 		</div>
  
 		<nav class="navbar">
-			<a href="#" class="logo">Mehdi Rahal</a>
-			<ul class="nav-menu ">
-				<li class="nav-item"><a href="#portfolio" class="nav-link">Portfolio</a></li>
-				<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-				<li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-			</ul>
-			<div class="hamburger">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</div>
+<div class="header">
+	<a href="#" class="logo">Mehdi Rahal</a>
+	<ul class="nav-menu ">
+		<li class="nav-item"><a href="#portfolio" class="nav-link">Portfolio</a></li>
+		<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+		<li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+	</ul>
+	<div class="hamburger">
+		<span class="bar"></span>
+		<span class="bar"></span>
+		<span class="bar"></span>
+	</div>
+</div>
 		</nav>
 
 		<div class="headline">
