Add popup modal 'js only'

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ crossorigin="anonymous"
 		  </div>
 		</div>
 	</footer>
-	<script src="script.js"></script>
-	<script src="work-popup.js"></script>
+	<script src="scripts/mobile-menu.js"></script>
+	<script src="scripts/popup-work.js"></script>
 
 	
 </body>
