Add popup style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<title>Portfolio_mobile</title>
 	<link rel="stylesheet" href="styles/mobile.css">
 	<link rel="stylesheet" href="styles/desktop.css">
-	<link rel="stylesheet" href="styles/work-popup.css">
+	<link rel="stylesheet" href="styles/popup-work.css">
 	<link
 rel="stylesheet"
 href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
