Add links for twiter linkedin github

--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@ crossorigin="anonymous"
 				<div class="connect">LET'S CONNECT</div>
 				<div class="contacts">
 					<ul class="no_bullet">
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="twitter"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector-M.svg" alt="M"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="github"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector.svg" alt="vector"></a></li>
+						<li><a href="https://twitter.com/MRahal92" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="twitter"></a></li>
+						<li><a href="https://www.linkedin.com/in/mehdi-rahal22/" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
+						<li><a href="https://github.com/Mehdi-Rh" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="github"></a></li>
 					</ul>			
 				</div>
 			</div>
@@ -132,12 +130,10 @@ crossorigin="anonymous"
 					<div class="connect_about_my_self">LET'S CONNECT</div>
 					<div class="contacts_about_my_self">
 						<ul class="no_bullet">
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="github"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector.svg" alt="vector"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="twitter"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector-M.svg" alt="M"></a></li>
-						</ul>			
+						<li><a href="https://twitter.com/MRahal92" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="twitter"></a></li>
+						<li><a href="https://www.linkedin.com/in/mehdi-rahal22/" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
+						<li><a href="https://github.com/Mehdi-Rh" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="github"></a></li>
+					</ul>			
 					</div>
 				</div>
 				<a href="#" class="btn-effect resume_btn">Get my resume</a>
