Add resume link

--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@ crossorigin="anonymous"
 				<div class="connect">LET'S CONNECT</div>
 				<div class="contacts">
 					<ul class="no_bullet">
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="twitter"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector-M.svg" alt="M"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="github"></a></li>
-						<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector.svg" alt="vector"></a></li>
+						<li><a href="https://twitter.com/MRahal92" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="Twitter"></a></li>
+						<li><a href="https://www.linkedin.com/in/mehdi-rahal22/" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
+						<li><a href="https://github.com/Mehdi-Rh" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="Github"></a></li>
 					</ul>			
 				</div>
 			</div>
@@ -130,17 +128,15 @@ crossorigin="anonymous"
 				</div>	
 				<div>
 					<div class="connect_about_my_self">LET'S CONNECT</div>
-					<div class="contacts_about_my_self">
+					<div class="contacts">
 						<ul class="no_bullet">
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="github"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector.svg" alt="vector"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="twitter"></a></li>
-							<li><a href="#" aria-hidden="true"><img src="images/welcome/icons_contacts/Vector-M.svg" alt="M"></a></li>
+							<li><a href="https://twitter.com/MRahal92" aria-hidden="true"><img src="images/welcome/icons_contacts/twitter.svg" alt="Twitter"></a></li>
+							<li><a href="https://www.linkedin.com/in/mehdi-rahal22/" aria-hidden="true"><img src="images/welcome/icons_contacts/Linkedin-icon.svg" alt="linkedin"></a></li>
+							<li><a href="https://github.com/Mehdi-Rh" aria-hidden="true"><img src="images/welcome/icons_contacts/github.svg" alt="Github"></a></li>
 						</ul>			
 					</div>
 				</div>
-				<a href="#" class="btn-effect resume_btn">Get my resume</a>
+				<a href="https://docs.google.com/document/d/1-QvYtu2SCzwlHwzDsX80yJM7erfKAe_JQK5mB3yXPm8/edit?usp=sharing" class="btn-effect resume_btn">Get my resume</a>
 			</div>
 			<!-- Skills division -->
 			<div class="skill_div">
@@ -236,7 +232,7 @@ crossorigin="anonymous"
 	</footer>
 	<script src="scripts/mobile-menu.js"></script>
 	<script src="scripts/popup-work.js"></script>
-	<script src="scripts/validateForm.js"></script>
+	<script type="module" src="scripts/validateForm.js"></script>
 	<script src="scripts/storage.js"></script>
 
 </body>
